--- a/eye-webui/pom.xml
+++ b/eye-webui/pom.xml
@@ -20,5 +20,17 @@
   </dependencies>
   <build>
     <finalName>eye-webui</finalName>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>2.4</version>
+      <configuration>
+        <warName>tea</warName>
+        <warSourceDirectory>src/main/webapp</warSourceDirectory>
+        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+      </configuration>
+    </plugin>
+  </plugins>
   </build>
 </project>
