--- a/eye-collection/eye-database/pom.xml
+++ b/eye-collection/eye-database/pom.xml
@@ -4,12 +4,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.qtone.wxq</groupId>
-    <artifactId>wxq-eye</artifactId>
+    <artifactId>eye-collection</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>eye-core</artifactId>
-  <name>圈眼</name>
+  <artifactId>eye-database</artifactId>
+  <name>圈眼集成数据库</name>
   <packaging>jar</packaging>
+
+
   <build>
     <finalName>eye-database</finalName>
     <plugins>
