--- a/eye-collection/pom.xml
+++ b/eye-collection/pom.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.qtone.wxq</groupId>
@@ -9,5 +8,10 @@
   </parent>
   <artifactId>eye-collection</artifactId>
   <name>圈眼收集中心</name>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
+  <modules>
+    <module>eye-springmvc</module>
+    <module>eye-dubbo</module>
+    <module>eye-database</module>
+  </modules>
 </project>
