--- a/eye-store/eye-mysql/pom.xml
+++ b/eye-store/eye-mysql/pom.xml
@@ -10,4 +10,21 @@
   <artifactId>eye-mysql</artifactId>
   <name>圈眼mysql存储</name>
   <packaging>jar</packaging>
+  <build>
+    <finalName>eye-database</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
